fix: icon alignment for all [data-icon] (#2271)

--- a/packages/foundations/scss/icons/include.scss
+++ b/packages/foundations/scss/icons/include.scss
@@ -51,6 +51,10 @@
 
 [data-icon],
 [data-icon-before] {
+	&:is(span) {
+		display: inline-flex;
+	}
+
 	&::before {
 		@extend %icon !optional;
 		margin-inline-end: icon-helpers.$default-icon-margin-end;
@@ -65,6 +69,10 @@
 }
 
 [data-icon-after] {
+	&:is(span) {
+		display: inline-flex;
+	}
+
 	&::after {
 		@extend %icon !optional;
 		content: icon-helpers.$default-icon-content-after;
